--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@japa/snapshot": "^2.0.8",
     "@release-it/conventional-changelog": "^10.0.1",
     "@swc/core": "1.10.7",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.1",
     "@types/qs": "^6.14.0",
     "@types/supertest": "^6.0.3",
@@ -61,6 +62,7 @@
     "edge.js": "^6.2.1",
     "eslint": "^9.29.0",
     "get-port": "^7.1.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "release-it": "^19.0.3",
     "supertest": "^7.1.1",
